#!/usr/bin/env python3
"""
OKX äº¤æ˜“æ‰€é›†æˆæµ‹è¯•è„šæœ¬

æµ‹è¯• OKX Market Data å’Œ Gateway çš„ç«¯åˆ°ç«¯åŠŸèƒ½
"""

import sys
import time
import zmq
from pathlib import Path

# æ·»åŠ  strategy æ¨¡å—åˆ°è·¯å¾„
sys.path.insert(0, str(Path(__file__).parent))

from strategy.engine import StrategyEngine, OrderGateway
from strategy.strategies.ema_cross import EMACrossStrategy


def test_okx_market_data():
    """æµ‹è¯• OKX è¡Œæƒ…æ¥æ”¶"""
    print("=" * 60)
    print("æµ‹è¯• 1: OKX Market Data æ¥æ”¶")
    print("=" * 60)

    context = zmq.Context()
    socket = context.socket(zmq.SUB)
    socket.connect("tcp://localhost:5558")
    socket.setsockopt_string(zmq.SUBSCRIBE, "md.")

    print("è¿æ¥åˆ° OKX Market Data (tcp://localhost:5558)")
    print("ç­‰å¾…è¡Œæƒ…æ•°æ®...")

    received_count = 0
    start_time = time.time()

    try:
        while received_count < 10 and (time.time() - start_time) < 30:
            if socket.poll(1000):
                topic = socket.recv_string()
                data = socket.recv_pyobj()
                received_count += 1

                print(f"\n[{received_count}] æ”¶åˆ°è¡Œæƒ…:")
                print(f"  Topic: {topic}")
                print(f"  Symbol: {data.symbol}")
                print(f"  Exchange: {data.exchange}")
                print(f"  Price: {data.last_price}")
                print(f"  Volume: {data.volume}")
                print(f"  Latency: {(data.local_time - data.exchange_time) / 1_000_000:.2f} ms")

        if received_count > 0:
            print(f"\nâœ… æˆåŠŸæ¥æ”¶ {received_count} æ¡ OKX è¡Œæƒ…æ•°æ®")
            return True
        else:
            print("\nâŒ æœªæ¥æ”¶åˆ° OKX è¡Œæƒ…æ•°æ®")
            return False

    except KeyboardInterrupt:
        print("\næµ‹è¯•ä¸­æ–­")
        return False
    finally:
        socket.close()
        context.term()


def test_okx_gateway():
    """æµ‹è¯• OKX Gateway è®¢å•æäº¤"""
    print("\n" + "=" * 60)
    print("æµ‹è¯• 2: OKX Gateway è®¢å•æäº¤")
    print("=" * 60)

    try:
        gateway = OrderGateway(
            endpoint="tcp://localhost:5559",
            use_protobuf=True
        )

        # åˆ›å»ºæµ‹è¯•è®¢å•
        from strategy.engine import Order

        order = Order(
            order_id="TEST_OKX_001",
            strategy_id="test_okx",
            symbol="BTCUSDT",
            side="BUY",
            price=50000.0,
            volume=1,
        )

        print(f"\næäº¤æµ‹è¯•è®¢å•:")
        print(f"  Order ID: {order.order_id}")
        print(f"  Symbol: {order.symbol}")
        print(f"  Side: {order.side}")
        print(f"  Price: {order.price}")
        print(f"  Volume: {order.volume}")

        gateway.submit_order(order)
        print("\nâœ… è®¢å•æäº¤æˆåŠŸ")

        # ç­‰å¾…æˆäº¤å›æŠ¥
        print("\nç­‰å¾…æˆäº¤å›æŠ¥...")
        context = zmq.Context()
        socket = context.socket(zmq.SUB)
        socket.connect("tcp://localhost:5560")
        socket.setsockopt_string(zmq.SUBSCRIBE, "trade.")

        if socket.poll(5000):
            topic = socket.recv_string()
            trade = socket.recv_pyobj()

            print(f"\næ”¶åˆ°æˆäº¤å›æŠ¥:")
            print(f"  Topic: {topic}")
            print(f"  Trade ID: {trade.trade_id}")
            print(f"  Order ID: {trade.order_id}")
            print(f"  Symbol: {trade.symbol}")
            print(f"  Side: {trade.side}")
            print(f"  Filled Price: {trade.filled_price}")
            print(f"  Filled Volume: {trade.filled_volume}")
            print(f"  Status: {trade.status}")
            print(f"  Commission: {trade.commission}")

            socket.close()
            context.term()

            print("\nâœ… æˆäº¤å›æŠ¥æ¥æ”¶æˆåŠŸ")
            return True
        else:
            socket.close()
            context.term()
            print("\nâŒ æœªæ”¶åˆ°æˆäº¤å›æŠ¥")
            return False

    except Exception as e:
        print(f"\nâŒ æµ‹è¯•å¤±è´¥: {e}")
        import traceback
        traceback.print_exc()
        return False


def test_okx_strategy():
    """æµ‹è¯• OKX ç­–ç•¥è¿è¡Œ"""
    print("\n" + "=" * 60)
    print("æµ‹è¯• 3: OKX ç­–ç•¥ç«¯åˆ°ç«¯æµ‹è¯•")
    print("=" * 60)

    try:
        # åˆ›å»ºç­–ç•¥å¼•æ“
        engine = StrategyEngine(
            md_endpoints=["tcp://localhost:5558"],  # OKX Market Data
            trade_endpoint="tcp://localhost:5560",  # OKX Gateway
        )

        # åˆ›å»ºè®¢å•ç½‘å…³
        gateway = OrderGateway(
            endpoint="tcp://localhost:5559",  # OKX Gateway
            use_protobuf=True
        )

        # åˆ›å»º EMA äº¤å‰ç­–ç•¥
        strategy = EMACrossStrategy(
            strategy_id="ema_cross_okx",
            config={
                "symbol": "BTCUSDT",
                "fast_period": 5,
                "slow_period": 20,
                "trade_volume": 1,
            }
        )
        strategy.set_order_gateway(gateway)

        engine.add_strategy(strategy)

        print("\nç­–ç•¥é…ç½®:")
        print(f"  Strategy ID: ema_cross_okx")
        print(f"  Symbol: BTCUSDT")
        print(f"  Fast EMA: 5")
        print(f"  Slow EMA: 20")
        print(f"  Trade Volume: 1")

        print("\nè¿è¡Œç­–ç•¥ 60 ç§’...")
        engine.run(duration=60)

        print("\nâœ… ç­–ç•¥è¿è¡Œå®Œæˆ")
        return True

    except KeyboardInterrupt:
        print("\næµ‹è¯•ä¸­æ–­")
        return False
    except Exception as e:
        print(f"\nâŒ æµ‹è¯•å¤±è´¥: {e}")
        import traceback
        traceback.print_exc()
        return False


def main():
    """è¿è¡Œæ‰€æœ‰æµ‹è¯•"""
    print("\n" + "=" * 60)
    print("OKX äº¤æ˜“æ‰€é›†æˆæµ‹è¯•")
    print("=" * 60)

    results = []

    # æµ‹è¯• 1: Market Data
    results.append(("Market Data", test_okx_market_data()))

    # æµ‹è¯• 2: Gateway
    results.append(("Gateway", test_okx_gateway()))

    # æµ‹è¯• 3: Strategy
    results.append(("Strategy", test_okx_strategy()))

    # æ±‡æ€»ç»“æœ
    print("\n" + "=" * 60)
    print("æµ‹è¯•ç»“æœæ±‡æ€»")
    print("=" * 60)

    for name, result in results:
        status = "âœ… PASS" if result else "âŒ FAIL"
        print(f"{name:20s}: {status}")

    passed = sum(1 for _, result in results if result)
    total = len(results)

    print(f"\næ€»è®¡: {passed}/{total} é€šè¿‡")

    if passed == total:
        print("\nğŸ‰ æ‰€æœ‰æµ‹è¯•é€šè¿‡!")
        return 0
    else:
        print(f"\nâš ï¸  {total - passed} ä¸ªæµ‹è¯•å¤±è´¥")
        return 1


if __name__ == "__main__":
    sys.exit(main())
